# rusty-home

./: .editorconfig  .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: check.yaml  publish.yaml  tailscale.yaml
rusty-shared-opts/: Cargo.toml
rusty-shared-opts/src/: git.rs  heartbeat.rs  lib.rs  redis.rs  sentry.rs  tracing.rs
rusty-shared-redis/: Cargo.toml
rusty-shared-redis/src/: lib.rs
rusty-shared-telegram/: Cargo.toml
rusty-shared-telegram/src/: api.rs  headers.rs  lib.rs  methods.rs  models.rs
rusty-shared-tracing/: Cargo.toml
rusty-shared-tracing/src/: lib.rs
rusty-shared-tractive/: Cargo.toml
rusty-shared-tractive/src/: kv_derive_with.rs  lib.rs
rusty-tado/: Cargo.toml  README.md
rusty-tado/src/: main.rs
rusty-tractive/: Cargo.toml  README.md  build.rs
rusty-tractive-telegram-bot/: Cargo.toml  README.md
rusty-tractive-telegram-bot/src/: bot.rs  listener.rs  main.rs  middleware.rs  opts.rs  prelude.rs
rusty-tractive/src/: api.rs  main.rs  microservice.rs  models.rs  opts.rs  service.rs
