[package]
name = "rusty-shared-opts"
version = "3.0.2"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.12", features = ["derive", "env"] }
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"] }
sentry = { version = "0.25.0", default-features = false }
tracing = "0.1.34"

[build-dependencies]
anyhow = "1.0.57"
vergen = { version = "7", default-features = false, features = ["git"] }
