[package]
name = "rusty-shared-telegram"
version = "0.0.0"
edition = "2021"
description = "Integrates Telegram Bot API"

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.53"
# derivative = "2.2.0"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"] }
serde = "1.0.136"
serde_json = "1.0.79"
serde_with = "1.13.0"
tracing = "0.1.34"
