[package]
name = "rusty-shared-telegram"
version = "0.0.0"
edition = "2021"
description = "Integrates Telegram Bot API"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
poem = { version = "1.3.36", default-features = false }
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"] }
secstr = { version = "0.5.0", features = ["serde"] }
serde = "1.0.136"
serde_json = "1.0.79"
serde_with = { version = "2.0.0" }
tracing = "0.1.34"
