[package]
name = "rusty-shared-telegram"
version = "0.0.0"
edition = "2021"
description = "Integrates Telegram Bot API"

[dependencies]
anyhow = "1.0.61"
async-trait = "0.1.57"
poem = { version = "1.3.38", default-features = false }
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"] }
secstr = { version = "0.5.0", features = ["serde"] }
serde = "1.0.143"
serde_json = "1.0.83"
serde_with = { version = "2.0.0" }
tracing = "0.1.36"
