[package]
name = "rusty-shared-tractive"
version = "0.1.0"
edition = "2021"
description = "Shared Tractive structures and functions"

[dependencies]
chrono = "0.4.19"
fred = { version = "5.0.0", default-features = false }
kv-derive = "1.0.0-rc.9"
serde = "1.0.137"
serde_json = "1.0.79"
serde_with = { version = "1.13.0", features = ["chrono"] }
