[package]
name = "rusty-tado"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-std = { version = "1.11.0", features = ["attributes"] }
clap = "3.1.12"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls", "json"] }
sentry = { version = "0.25.0", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic", "anyhow", "tracing"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter"] }
