[package]
name = "rusty-tractive"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-std = { version = "1.11.0", features = ["attributes"] }
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.1.12"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls", "stream"] }
serde = "1.0.136"
serde_json = "1.0.79"
tracing = "0.1.34"

rusty-shared-tracing = { path = "../rusty-shared-tracing" }
